--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,4 +1,7 @@
 *.iml
+.classpath
+.project
+.settings/
 .gradle
 /local.properties
 /.idea/workspace.xml
@@ -6,3 +9,4 @@
 .DS_Store
 /build
 /captures
+
